--- a/Subscriber/app/components/templates/match_subscriptions.html
+++ b/Subscriber/app/components/templates/match_subscriptions.html
@@ -13,7 +13,7 @@
         class="subcription"
         ng-repeat = "item in publications">
         <div class="match-subscription">
-          {{item.sub}}
+          {{item.sub | json }}
         </div>
         <div
           class="item"
@@ -33,8 +33,7 @@
           ng-if="item.pub.value">
           <span> Value </span>
           <ul>
-            <li ng-bind="item.pub.value.symbol"></li>
-            <li ng-bind="item.pub.value.valueAction"></li>
+            <li ng-bind="item.pub.value.value"></li>
           </ul>
         </div>
         <div
@@ -42,8 +41,7 @@
           ng-if="item.pub.variation">
           <span> Variation </span>
           <ul>
-            <li ng-bind="item.pub.variation.symbol"></li>
-            <li ng-bind="item.pub.variation.valueVariation"></li>
+            <li ng-bind="item.pub.variation.value"></li>
           </ul>
         </div>
         <div
